--- a/common/css/page.css
+++ b/common/css/page.css
@@ -883,19 +883,52 @@ span.size {
   transform: translateY(0px);
 }
 
-.tab-options table {
+/* ===== markdown ==== */
+table {
   margin: 0px auto;
   text-align: center;
   width: 100%;
 }
-.tab-options table td, .tab-options table th {
+table td, table th {
   text-align: center;
   padding: 10px;
   border: 1px solid #ddd;
 }
-.tab-options table tr:nth-child(2n) {
+table tr:nth-child(2n) {
   background-color: #f5f5f5;
 }
-.tab-options table td img {
+table td img {
   max-width: 100%;
+}
+
+/* ===== loading ==== */
+.loading {
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  display: none;
+}
+.dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #999;
+  margin: 0px 3px;
+  animation: dot 1.5s infinite ease-in-out;
+}
+.dot.dot2 {
+  animation-delay: 0.35s;
+}
+.dot.dot3 {
+  animation-delay: 0.7s;
+}
+
+@keyframes dot {
+  0% {
+    
+  }
+  60% {
+    background: #999;
+  }
 }
